--- a/README
+++ b/README
@@ -1,38 +1,70 @@
 Object Oriented Programming Course
 Homework - VideosDB
+Alexandra-Maria Moroiu 325CA
 
-November 2021
+File Structure:
+    - action package:
+        -- abstract class Action + Command, Query, Recom classes that extend it
+        -- uses fileio.ActionInputData, Writer
+    - actor package:
+        -- Actor class and ActorAwards enum, uses fileio.ActorInputData
+    - database:
+        -- Database class that stores user, actor and video data + helper
+        methods
+    - entertainment:
+        -- abstract class Video + Movie, Show classes that extend it
+        -- Season class and Genre enum are used by Show
+        -- uses fileio.ShowInput, SerialInputData, MovieInputData
+    - filter:
+        -- abstract class Filter and FilterActors, FilterVideos, FilterUsers
+        that extend it
+        -- FilterShows and FilterMovies extend FilterVideos
+        -- each has filtering and sorting helper methods that filter the
+        database
+    - user:
+        -- User class, uses fileio.UserInputData
 
-# Info
-https://ocw.cs.pub.ro/courses/poo-ca-cd/teme/tema
+Implementation:
+    - based on the input data, actors, users, movies and tv shows are added to
+    the database
+    - next up, the actions are being read, and depending on the action type,
+    command, query or recommendation objects are created
+    - each of them has similar and separate parameters; based on those they
+    execute different types of operations
+    - command allows users to add a favourite video to their list, mark a video
+    as viewed or rate one in case they haven't already
+    - queries are global operations that inspect the whole database, N being the
+     number of data to be displayed
+        -- users: display the first N-th users that have been actively rating
+        videos
+        -- videos:
+            * top N videos sorted by their rating
+            * top N videos that have been added to favourite lists
+            * top N videos sorted by their overall duration
+            * top N videos sorted by the times they have been viewed
+        -- actors:
+            * top N actors sorted by the average rating of the videos they
+            played in
+            * top N actors sorted by the number of awards they have won
+            * top N actors whose description contain certain keywords
+     - recommendations are user requests related to videos
+        -- all users:
+            * standard: first video in the database they haven't watched
+            * best unseen: best rated video they haven't watched
+        -- only premium users:
+            * popular: first video of the most popular genre they haven't
+            watched
+            * favorite: first favorite video they haven't watched
+            * search: display best rated videos of a given genre they haven't
+            watched
 
-# About the code
-
-We provide the input tests, the logic that parses them and the checker that runs them.
-
-* test_db - contains the tests in JSON format
-* src
-   * checker - the checker's sources including the checkstyle necessary files, not to be modified
-   * fileio - classes for parsing the input files, not to be modified
-   * common, utils
-        * contain utility classes with constants and static methods
-        * you can add your own functionality in the existing classes or add new classes as well
-   * actor
-        * contains an enum for the types of awards an actor can have - do not modify it
-        * you can add here your actor related classes
-   * entertainment
-        * contains an enum for the supported video genres - do not modify it
-        * class for representing a Season of a tv show - do not modify it
-        * you can add here your entertainment related classes
-
-We encourage you to organize your implementation in packages based on the functionality their classes offer. Try to keep
-your code modular, readable and documented.
-
-# Testing
-
-The Main class runs the checker on your implementation. Add the entry point to your implementation in it.
-
-Run Main to test your implementation from the IDE or from command line.
-
-Run the main method from Test class with the name of the input file from the command line and the result will be written
-to the out.txt file. Thus, you can compare this result with ref.
+Sidenotes:
+    - OOP design pattern-wise, I know this implementation is weak and I'm sorry
+    for that; I would've researched more on singleton, visitor etc. if I
+    started the homework earlier
+    - if you have any recommendations regarding that, please let me know (on
+    vmchecker or wherever you'd like), it would help me get a better grasp of
+    recognizing design patterns
+    - although this homework's main idea was really cool, it was so ambiguous;
+    it took me a day to figure out what I actually need to do
+    - lastly, I hope my implementation doesn't tilt you too much
